<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back"
                android:contentDescription="Back"
                android:background="@color/black"
                android:layout_marginBottom="10dp"
                app:rippleColor="@color/red"
                />


            <!-- Profile Image -->

            <ImageView
                android:id="@+id/imgV_Profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_icon"
                android:background="@color/black"
                android:contentDescription="@string/profile_image"/>


            <!-- Username -->
            <TextView
                android:id="@+id/txtV_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/full_name"
                android:textSize="22sp"
                android:textStyle="bold"/>


            <!-- Email -->
            <TextView
                android:id="@+id/txtV_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textSize="16sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdminReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Admin Reports"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:cornerRadius="20dp"
                android:visibility="gone" />


            <!-- My Products -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_MyProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                app:cornerRadius="20dp"
                android:text="@string/my_products"
                app:rippleColor="@color/red"
                />

            <!-- My Chats -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_MyChats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:text="@string/my_chats"
                app:cornerRadius="20dp"
                app:rippleColor="@color/red"
                />

            <!--Warnings-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_MyWarnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/my_warnings"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:rippleColor="@color/orange"/>

            <!-- Saved -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:text="@string/saved_for_later"
                app:cornerRadius="20dp"
                app:rippleColor="@color/red"
                />

            <!-- Settings -->

            <!-- Logout Button -->

            <!-- Laptop reacts to logout -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/settings"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:rippleColor="@color/red" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/log_out"
                android:textColor="@color/white"
                app:rippleColor="@color/red"
                app:cornerRadius="20dp"
                />

            <com.example.electrohub.views.LaptopView
                android:id="@+id/laptopLogoutView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
