<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".fragments.EmailVerificationFragment"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/txt_VerificationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_sent_a_verification_email_please_verify_your_email_before_continuing"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_CheckVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:text="@string/i_ve_verified_my_email"
        app:cornerRadius="20dp"
        app:rippleColor="@color/green"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ResendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:text="@string/resend_email"
        app:cornerRadius="20dp"
        app:rippleColor="@color/orange"
        android:layout_marginTop="12dp"/>

</LinearLayout>